src/ffi/ps2000a/ps2000a.rs

pub use self::enPS2000ASweepType as PS2000A_SWEEP_TYPE;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000AWaveType {
    PS2000A_SINE = 0,
    PS2000A_SQUARE = 1,
    PS2000A_TRIANGLE = 2,
    PS2000A_RAMP_UP = 3,
    PS2000A_RAMP_DOWN = 4,
    PS2000A_SINC = 5,
    PS2000A_GAUSSIAN = 6,
    PS2000A_HALF_SINE = 7,
    PS2000A_DC_VOLTAGE = 8,
    PS2000A_MAX_WAVE_TYPES = 9,
}
pub use self::enPS2000AWaveType as PS2000A_WAVE_TYPE;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000AExtraOperations {
    PS2000A_ES_OFF = 0,
    PS2000A_WHITENOISE = 1,
    PS2000A_PRBS = 2,
}
pub use self::enPS2000AExtraOperations as PS2000A_EXTRA_OPERATIONS;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000ASigGenTrigType {
    PS2000A_SIGGEN_RISING = 0,
    PS2000A_SIGGEN_FALLING = 1,
    PS2000A_SIGGEN_GATE_HIGH = 2,
    PS2000A_SIGGEN_GATE_LOW = 3,
}
pub use self::enPS2000ASigGenTrigType as PS2000A_SIGGEN_TRIG_TYPE;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000ASigGenTrigSource {
    PS2000A_SIGGEN_NONE = 0,
    PS2000A_SIGGEN_SCOPE_TRIG = 1,
    PS2000A_SIGGEN_AUX_IN = 2,
    PS2000A_SIGGEN_EXT_IN = 3,
    PS2000A_SIGGEN_SOFT_TRIG = 4,
}
pub use self::enPS2000ASigGenTrigSource as PS2000A_SIGGEN_TRIG_SOURCE;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000AIndexMode {
    PS2000A_SINGLE = 0,
    PS2000A_DUAL = 1,
    PS2000A_QUAD = 2,
    PS2000A_MAX_INDEX_MODES = 3,
}
pub use self::enPS2000AIndexMode as PS2000A_INDEX_MODE;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000A_ThresholdMode { PS2000A_LEVEL = 0, PS2000A_WINDOW = 1, }
pub use self::enPS2000A_ThresholdMode as PS2000A_THRESHOLD_MODE;
pub const enPS2000AThresholdDirection_PS2000A_INSIDE:
          enPS2000AThresholdDirection =
    enPS2000AThresholdDirection::PS2000A_ABOVE;
pub const enPS2000AThresholdDirection_PS2000A_OUTSIDE:
          enPS2000AThresholdDirection =
    enPS2000AThresholdDirection::PS2000A_BELOW;
pub const enPS2000AThresholdDirection_PS2000A_ENTER:
          enPS2000AThresholdDirection =
    enPS2000AThresholdDirection::PS2000A_RISING;
pub const enPS2000AThresholdDirection_PS2000A_EXIT:
          enPS2000AThresholdDirection =
    enPS2000AThresholdDirection::PS2000A_FALLING;
pub const enPS2000AThresholdDirection_PS2000A_ENTER_OR_EXIT:
          enPS2000AThresholdDirection =
    enPS2000AThresholdDirection::PS2000A_RISING_OR_FALLING;
pub const enPS2000AThresholdDirection_PS2000A_NONE:
          enPS2000AThresholdDirection =
    enPS2000AThresholdDirection::PS2000A_RISING;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000AThresholdDirection {
    PS2000A_ABOVE = 0,
    PS2000A_BELOW = 1,
    PS2000A_RISING = 2,
    PS2000A_FALLING = 3,
    PS2000A_RISING_OR_FALLING = 4,
    PS2000A_ABOVE_LOWER = 5,
    PS2000A_BELOW_LOWER = 6,
    PS2000A_RISING_LOWER = 7,
    PS2000A_FALLING_LOWER = 8,
    PS2000A_POSITIVE_RUNT = 9,
    PS2000A_NEGATIVE_RUNT = 10,
}
pub use self::enPS2000AThresholdDirection as PS2000A_THRESHOLD_DIRECTION;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000ADigitalDirection {
    PS2000A_DIGITAL_DONT_CARE = 0,
    PS2000A_DIGITAL_DIRECTION_LOW = 1,
    PS2000A_DIGITAL_DIRECTION_HIGH = 2,
    PS2000A_DIGITAL_DIRECTION_RISING = 3,
    PS2000A_DIGITAL_DIRECTION_FALLING = 4,
    PS2000A_DIGITAL_DIRECTION_RISING_OR_FALLING = 5,
    PS2000A_DIGITAL_MAX_DIRECTION = 6,
}
pub use self::enPS2000ADigitalDirection as PS2000A_DIGITAL_DIRECTION;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000ATriggerState {
    PS2000A_CONDITION_DONT_CARE = 0,
    PS2000A_CONDITION_TRUE = 1,
    PS2000A_CONDITION_FALSE = 2,
    PS2000A_CONDITION_MAX = 3,
}
pub use self::enPS2000ATriggerState as PS2000A_TRIGGER_STATE;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct tPS2000ATriggerConditions {
    pub channelA: PS2000A_TRIGGER_STATE,
    pub channelB: PS2000A_TRIGGER_STATE,
    pub channelC: PS2000A_TRIGGER_STATE,
    pub channelD: PS2000A_TRIGGER_STATE,
    pub external: PS2000A_TRIGGER_STATE,
    pub aux: PS2000A_TRIGGER_STATE,
    pub pulseWidthQualifier: PS2000A_TRIGGER_STATE,
    pub digital: PS2000A_TRIGGER_STATE,
}
impl Clone for tPS2000ATriggerConditions {
    fn clone(&self) -> Self { *self }
}
pub type PS2000A_TRIGGER_CONDITIONS = tPS2000ATriggerConditions;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct tPS2000APwqConditions {
    pub channelA: PS2000A_TRIGGER_STATE,
    pub channelB: PS2000A_TRIGGER_STATE,
    pub channelC: PS2000A_TRIGGER_STATE,
    pub channelD: PS2000A_TRIGGER_STATE,
    pub external: PS2000A_TRIGGER_STATE,
    pub aux: PS2000A_TRIGGER_STATE,
    pub digital: PS2000A_TRIGGER_STATE,
}
impl Clone for tPS2000APwqConditions {
    fn clone(&self) -> Self { *self }
}
pub type PS2000A_PWQ_CONDITIONS = tPS2000APwqConditions;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct tPS2000ADigitalChannelDirections {
    pub channel: PS2000A_DIGITAL_CHANNEL,
    pub direction: PS2000A_DIGITAL_DIRECTION,
}
impl Clone for tPS2000ADigitalChannelDirections {
    fn clone(&self) -> Self { *self }
}
pub type PS2000A_DIGITAL_CHANNEL_DIRECTIONS =
    tPS2000ADigitalChannelDirections;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct tPS2000ATriggerChannelProperties {
    pub thresholdUpper: i16,
    pub thresholdUpperHysteresis: u16,
    pub thresholdLower: i16,
    pub thresholdLowerHysteresis: u16,
    pub channel: PS2000A_CHANNEL,
    pub thresholdMode: PS2000A_THRESHOLD_MODE,
}
impl Clone for tPS2000ATriggerChannelProperties {
    fn clone(&self) -> Self { *self }
}
pub type PS2000A_TRIGGER_CHANNEL_PROPERTIES =
    tPS2000ATriggerChannelProperties;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000ARatioMode {
    PS2000A_RATIO_MODE_NONE = 0,
    PS2000A_RATIO_MODE_AGGREGATE = 1,
    PS2000A_RATIO_MODE_DECIMATE = 2,
    PS2000A_RATIO_MODE_AVERAGE = 4,
}
pub use self::enPS2000ARatioMode as PS2000A_RATIO_MODE;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000APulseWidthType {
    PS2000A_PW_TYPE_NONE = 0,
    PS2000A_PW_TYPE_LESS_THAN = 1,
    PS2000A_PW_TYPE_GREATER_THAN = 2,
    PS2000A_PW_TYPE_IN_RANGE = 3,
    PS2000A_PW_TYPE_OUT_OF_RANGE = 4,
}
pub use self::enPS2000APulseWidthType as PS2000A_PULSE_WIDTH_TYPE;
#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum enPS2000AHoldOffType {
    PS2000A_TIME = 0,
    PS2000A_MAX_HOLDOFF_TYPE = 1,
}
pub use self::enPS2000AHoldOffType as PS2000A_HOLDOFF_TYPE;
pub type ps2000aBlockReady =
    ::std::option::Option<unsafe extern "C" fn(handle: i16,
                                               status: PICO_STATUS,
                                               pParameter:
                                                   *mut ::std::os::raw::c_void)>;
pub type ps2000aStreamingReady =
    ::std::option::Option<unsafe extern "C" fn(handle: i16, noOfSamples: i32,
                                               startIndex: u32, overflow: i16,
                                               triggerAt: u32, triggered: i16,
                                               autoStop: i16,
                                               pParameter:
                                                   *mut ::std::os::raw::c_void)>;
pub type ps2000aDataReady =
    ::std::option::Option<unsafe extern "C" fn(handle: i16,
                                               status: PICO_STATUS,
                                               noOfSamples: u32,
                                               overflow: i16,
                                               pParameter:
                                                   *mut ::std::os::raw::c_void)>;
extern "C" {
    pub fn ps2000aOpenUnit(handle: *mut i16, serial: *mut i8) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aOpenUnitAsync(status: *mut i16, serial: *mut i8)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aOpenUnitProgress(handle: *mut i16,
                                   progressPercent: *mut i16,
                                   complete: *mut i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetUnitInfo(handle: i16, string: *mut i8, stringLength: i16,
                              requiredSize: *mut i16, info: PICO_INFO)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aFlashLed(handle: i16, start: i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aCloseUnit(handle: i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aMemorySegments(handle: i16, nSegments: u32,
                                 nMaxSamples: *mut i32) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetChannel(handle: i16, channel: PS2000A_CHANNEL,
                             enabled: i16, type_: PS2000A_COUPLING,
                             range: PS2000A_RANGE, analogOffset: f32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetDigitalPort(handle: i16, port: PS2000A_DIGITAL_PORT,
                                 enabled: i16, logicLevel: i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetNoOfCaptures(handle: i16, nCaptures: u32) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetTimebase(handle: i16, timebase: u32, noSamples: i32,
                              timeIntervalNanoseconds: *mut i32,
                              oversample: i16, maxSamples: *mut i32,
                              segmentIndex: u32) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetTimebase2(handle: i16, timebase: u32, noSamples: i32,
                               timeIntervalNanoseconds: *mut f32,
                               oversample: i16, maxSamples: *mut i32,
                               segmentIndex: u32) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetSigGenArbitrary(handle: i16, offsetVoltage: i32,
                                     pkToPk: u32, startDeltaPhase: u32,
                                     stopDeltaPhase: u32,
                                     deltaPhaseIncrement: u32,
                                     dwellCount: u32,
                                     arbitraryWaveform: *mut i16,
                                     arbitraryWaveformSize: i32,
                                     sweepType: PS2000A_SWEEP_TYPE,
                                     operation: PS2000A_EXTRA_OPERATIONS,
                                     indexMode: PS2000A_INDEX_MODE,
                                     shots: u32, sweeps: u32,
                                     triggerType: PS2000A_SIGGEN_TRIG_TYPE,
                                     triggerSource:
                                         PS2000A_SIGGEN_TRIG_SOURCE,
                                     extInThreshold: i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetSigGenBuiltIn(handle: i16, offsetVoltage: i32,
                                   pkToPk: u32, waveType: i16,
                                   startFrequency: f32, stopFrequency: f32,
                                   increment: f32, dwellTime: f32,
                                   sweepType: PS2000A_SWEEP_TYPE,
                                   operation: PS2000A_EXTRA_OPERATIONS,
                                   shots: u32, sweeps: u32,
                                   triggerType: PS2000A_SIGGEN_TRIG_TYPE,
                                   triggerSource: PS2000A_SIGGEN_TRIG_SOURCE,
                                   extInThreshold: i16) -> PICO_STATUS;
}
